Don't use Java11 from tests